# st25r3911

./: README.md  compile_commands.json
linux_demo/: CMakeLists.txt  toolchain_arm-linux-gnueabihf.cmake
linux_demo/demo/Src/: main.c  rfal_analog_config_custom.c
linux_demo/platform/Src/: pltf_gpio.c  pltf_i2c.c
linux_demo/platform/st25r3911b/: CMakeLists.txt  rfal_platform.h
rfal/doc/: ST25R3911B_CERTComplianceReport.html  ST25R3911B_MisraComplianceReport.html
rfal/source/: rfal_analogConfig.c
rfal/source/st25r3911/: rfal_features.h  rfal_rfst25r3911.c  st25r3911_com.h  st25r3911_interrupt.c
st25r_demos/Src/: demo_polling.c
